Fix post-tags margin-bottom gap

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -85,6 +85,7 @@
 .post-tags {
     margin-left: 0;
     margin-top: 0;
+    margin-bottom: 0;
     min-height: 0;
     text-align: left;
     padding: 4px 12px 2px 12px;
